[package]
name = "core_semver"
version = "0.1.0-beta.1"
edition = "2021"
description = "Cargo's flavor of Semantic Versioning"
documentation = "https://docs.rs/core_semver/"
readme = "README.md"
repository = "https://github.com/corers/semver.git"
license = "MIT"
keywords = ["semver", "bump", "release", "version"]
categories = ["config", "data-structures", "development-tools"]

[dependencies]
semver = "1.0.23"
